# clearbg

./: .gitignore  Dockerfile  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  template.py
.github/workflows/: main.yaml.sample
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_train.ipynb  03_mlflow.ipynb  trials.ipynb
src/clearbg/: __init__.py
src/clearbg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/clearbg/components/: data_ingestion.py  model_eval_mlflow.py  model_trainer.py
src/clearbg/config/: configuration.py
src/clearbg/constants/: __init__.py
src/clearbg/entity/: config_entity.py
src/clearbg/model/: u2net.py
src/clearbg/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_model_trainer.py  stage_03_mlflow_pipeline.py
src/clearbg/utils/: common.py  create_sample_grid.py  utils.py
